# msgboard

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  TEST.file
migrations/2018-11-19-163420_create_tables/: down.sql  up.sql
src/: api.rs  db.rs  main.rs  model.rs  multipart.rs  schema.rs  session.rs
static/css/: board.css  common.css
static/js/: board.js
static/pics/: bg1.xcf  flash.xcf
static/scrpt/: board.scrpt  nav.scrpt  temp.scrpt
static/style/: board.css  common-old.css  common.css  nav.css
templates/: index.html.tera
tera/: fm.tera  form.tera  index.tera  temp.tera  temp_fm.tera
