[package]
name = "msgboard"
version = "0.1.0"
authors = ["Lykrysh <lykrysh@gmail.com>"]

[dependencies]
actix = "0.7.3"
actix-web = "0.7.4"
dotenv = "0.13.0"
env_logger = "0.5.10"
futures = "0.1.22"
log = "0.4.3"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
json = "*"
tera = "0.11.8"
num_cpus = "*"
chrono = { version = "*", features = ["serde"] }

[dependencies.diesel]
features = ["postgres", "r2d2", "chrono"]
version = "1.3.2"
